# openai-for-ai

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/openai_for_ai/: __init__.py  builder.py  cli.py  models.py  parser.py  renderers.py  spec.py  utils.py
src/openai_for_ai/templates/: index.html.j2  operation.html.j2  schema.html.j2  variant_list.html.j2
tests/: test_builder_integration.py  test_parser.py  test_spec.py  test_utils.py
