[project]
name = "openai-for-ai"
version = "0.1.0"
description = "An automation tool to convert the latest OpenAI API spec in YAML to a format more suitable for consumption by LLMs"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "markupsafe>=3.0.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/btfranklin/openai-for-ai"
Issues = "https://github.com/btfranklin/openai-for-ai/issues"
Changelog = "https://github.com/btfranklin/openai-for-ai/releases"
Repository = "https://github.com/btfranklin/openai-for-ai.git"

[project.scripts]
openai-for-ai = "openai_for_ai.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check src tests"

[tool.ruff.lint]
select = ["E", "F", "W"]
